# webcam-motion-detection

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
recordings/: 2024-04-15 14-01-08.avi  2024-04-15 14-04-51.avi
src/: app.py
src/recorder/: motion.py
src/tgbot/: bot.py
